--- a/JoMAR/Views/Rooms/Public.cshtml
+++ b/JoMAR/Views/Rooms/Public.cshtml
@@ -32,8 +32,8 @@
         <td>
             @Html.DisplayFor(modelItem => item.aspnet_User.UserName)
         </td>
-        <td>           
-            @Html.ActionLink("Enter room", "", "Chat/" + item.Name)
+        <td>
+            @Html.ActionLink("Enter Room", "", "Chat/" + item.Name)
         </td>
     </tr> 
     }
