--- a/JoMAR/Views/Chat/Index.cshtml
+++ b/JoMAR/Views/Chat/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Chatroom: @Html.DisplayTextFor(model => model.Name)</h2>
-
+<p>Messages appear with the newest first.</p>
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
