--- a/JoMAR/Views/Chat/UploadFile.cshtml
+++ b/JoMAR/Views/Chat/UploadFile.cshtml
@@ -22,9 +22,8 @@
         $("form").submit(function () {
             $.ajax({
                 type: 'POST',
-                url: '/Upload'
+                url: '@Url.Action("", "Upload")'
             });
-            return false;
         });
     </script>
 </body>
